[gd_scene load_steps=4 format=3 uid="uid://s3nf710um85k"]

[ext_resource type="Theme" uid="uid://bbhj0pqw68l31" path="res://main_theme.tres" id="1_ejk6g"]
[ext_resource type="Script" path="res://scenes/ui/lose_screen.gd" id="1_xwoqv"]

[sub_resource type="LabelSettings" id="LabelSettings_tk4wc"]

[node name="BattleOverPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwoqv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -16.5
offset_right = 57.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ejk6g")

[node name="Label" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -8.5
offset_right = 52.5
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_tk4wc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = 19.0
offset_right = 57.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GiveUp" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme = ExtResource("1_ejk6g")
text = "Quit"

[node name="StartOver" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme = ExtResource("1_ejk6g")
text = "Start over?"
